syntax = "proto3";

package api;

option go_package = "go-metrics-collector/api";

message Metric {
    string id = 1;
    string type = 2;
    int64 delta = 3;
    double value = 4;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message UpdateMetricsResponse {
  string error = 1;
}

message GetMetricRequest {
  string id = 1;
}

message GetMetricResponse {
  Metric   metric = 1;
  string error = 2;
}

service Metrics {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
}
